--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   path_provider: ^2.0.13
   path: ^1.8.2
   sqflite: ^2.2.4+1
+  fluttertoast: ^8.2.2
+  logger: ^2.0.1
 
 dev_dependencies:
   flutter_test:
